Страница с ДЗ промо с окончательными правками

--- a/страница-помощь-с-домашними-заданиями2.html
+++ b/страница-помощь-с-домашними-заданиями2.html
@@ -367,10 +367,10 @@
                 <h3 class="uk-text-center uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300"
                     style="font-size: clamp(30px, 4vw, 40px); line-height: clamp(36px, 4.5vw, 46px);color: #292929;">
                     Стоимость занятий<br>
-                    300 рублей за 60 минут,<br>
+                    360 рублей за 60 минут,<br>
                     <span
                         style="font-size: clamp(26px, 3.5vw, 32px); line-height: clamp(36px, 4.5vw, 46px);font-family: 'Nunito-Bold';font-style: normal;font-weight: 700;color: #9c16b9;">потом
-                        5 рублей минута</span>
+                        6 рублей минута</span>
                 </h3>
                 <div class="uk-flex uk-flex-center">
                     <div style="font-family: 'Nunito-Bold';
@@ -402,7 +402,11 @@
                             style="font-size: clamp(26px, 3.5vw, 32px);line-height: clamp(32px, 4vw, 38px);font-family: 'Nunito-Bold';font-style: normal;font-weight: 700;padding-bottom: 0;">
                             Постоянный
                         </div>
-                        <div class="uk-padding napravlenia_textblock uk-text-center">
+                        <div class="uk-padding uk-text-center" style="
+                        font-family: 'Nunito-Bold';
+                        font-weight: 700;
+                        color: #2A3B4F;
+                        font-size: clamp(18px, 2.5vw, 20px);line-height: clamp(22px, 3vw, 28px);">
                             Мы под ключ возьмем контроль выполнения домашних заданий с вашим ребенком. Педагог-наставник
                             сам будет следить, чтобы домашние задания выполнялись на постоянной основе и качественно.
                         </div>
@@ -416,7 +420,11 @@
                             style="font-size: clamp(26px, 3.5vw, 32px);line-height: clamp(32px, 4vw, 38px);font-family: 'Nunito-Bold';font-style: normal;font-weight: 700;padding-bottom: 0;">
                             По необходимости
                         </div>
-                        <div class="uk-padding napravlenia_textblock  uk-text-center">
+                        <div class="uk-padding uk-text-center" style="
+                        font-family: 'Nunito-Bold';
+                        font-weight: 700;
+                        color: #2A3B4F;
+                        font-size: clamp(18px, 2.5vw, 20px);line-height: clamp(22px, 3vw, 28px);">
                             Сделаем с ребенком домашнее задание по вашему запросу. Приступим к выполнению через 10 минут
                             после того, как Вы оставите заявку. Вы можете обращаться по необходимости, в любой момент
                             времени и любое количество раз!
@@ -543,7 +551,7 @@
                                         style="font-family: 'Nunito-Bold';font-style: normal;font-weight: 700;font-size: 18px !important;line-height: 24px !important;padding-bottom: 5px !important;color: #2a3b4f;">
                                         Обычно репетитор не может по звонку сразу начать занятия, а ребенку нужно
                                         сделать
-                                        домашнее задание сегодня или прямо сейчас.
+                                        домашнее задание сегодня или прямо сейчас
                                     </li>
                                     <li
                                         style="font-family: 'Nunito-Bold';font-style: normal;font-weight: 700;font-size: 18px !important;line-height: 24px !important;padding-bottom: 5px !important;color: #2a3b4f;">
@@ -608,7 +616,7 @@
                             <span class="icons-radius-tor"
                                 style="min-width: 20px;width: 20px;height: 20px;border: 2px solid #2A3B4F;bottom: -5px;"></span>Обычно
                             в час получается сделать полноценно один-два разных предмета. Если вам всё нравится, вы
-                            можете продлить преподавателя и сделать еще домашние задания по другим предметам
+                            можете продлить время преподавателя и сделать еще домашние задания по другим предметам
                         </li>
                     </ul>
                     <a href="#zajavka"
@@ -1463,7 +1471,7 @@
                         них на бесплатной консультации</p>
                     <ul uk-scrollspy="cls: uk-animation-slide-bottom; delay: 500">
                         <li><span>01</span>Оставьте заявку</li>
-                        <li><span>02</span>Дождитесь нашего звонка — позвоним с 09:00 до 22:00</li>
+                        <li><span>02</span>Дождитесь нашего звонка — позвоним с 09:00 до 21:00</li>
                         <li><span>03</span>Задайте вопросы — мы ответим на них и поможем подобрать репетитора</li>
                     </ul>
                     <a href="#zajavka" class="uk-button uk-button-primary button-tree section-ten-second-button"
