Для страницы направлений  блок с ДЗ

--- a/страница направлений.html
+++ b/страница направлений.html
@@ -333,6 +333,13 @@
                             <li><a href="#">Шахматы</a></li>
                         </ul>
                     </li>
+                    <li class="uk-parent">
+                        <a href="#" class="trend7 trand-img">Домашние задания</a>
+                        <ul class="uk-nav-sub">
+                            <li><a href="#">Помощь с выполнением домашних заданий</a></li>
+                            
+                        </ul>
+                    </li>
                 </ul>
 
             </section>
