Кебаб правка а на баттон

--- a/шаблон — личный кабинет — последние занятия — педагог2.html
+++ b/шаблон — личный кабинет — последние занятия — педагог2.html
@@ -149,7 +149,7 @@
                                         <div class="cross">x</div>
                                         <figure></figure>
                                         <ul class="dropdown">
-                                            <li><a href="">Отменить</a></li>
+                                            <li><button>Отменить</button></li>
                                             <li><a href="">Написать о проблеме</a></li>
                                             <li><a href="">Вернуть средства</a></li>
                                         </ul>
