Активная ср.школа и перемещение кружка

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                                         <img class="trend-icon" src="svg/Начальная школа.svg">
 
                                         Начальная школа</a></li>
-                                <li><a href="#">
+                                <li class="uk-active"><a href="#">
 
                                         <img class="trend-icon" src="svg/Средняя школа.svg">
 
