Правки по ценникам

--- a/index.html
+++ b/index.html
@@ -810,9 +810,10 @@
                     uk-grid>
                     <div class="reviews-pricing-item" uk-scrollspy="cls: uk-animation-slide-top; delay: 400">
                         <h4>Нормальные цены</h4>
-                        <div>Мы установили нормальные цены на максимально высокий уровень репетиторов, который бывает. Теперь к нам приходят более тысячи довольных учеников каждый месяц.</div>
-                        <button class="uk-button uk-button-primary button-tree btn-search-more">
-                            Посмотреть все пакеты</button>
+                        <div>Мы установили нормальные цены на максимально высокий уровень репетиторов.</div>
+                        <div>Теперь к нам приходят более тысячи довольных учеников каждый месяц.</div>
+                        <button class="btn-reviews-pricing btn-search-more">
+                          <span>Посмотреть все пакеты</span><span uk-icon="icon: arrow-down; ratio: 1.3"></span></button>
                     </div>
                     <div class="reviews-pricing-item"  uk-scrollspy="cls: uk-animation-slide-top; delay: 800">
                         <div class="pricing-item bordercolor1">
@@ -820,18 +821,18 @@
                             <div class="pricing-item_icon bordercolor1"><img
                                     src="https://cdn.nyutonika.ru/icons/прайс-1.svg" alt="">
                             </div>
-                            <ul class="pricing-header_top color10">
+                            <ul class="pricing-header_top pricing-header_top_hit">
                                 <li>
-                                    Самый популярный
+                                    Популярный
                                 </li>
                             </ul>
-                            <div class="pricing-item_title">Пакет<br>
+                            <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                                 на 8 занятий</div>
                             <div class="pricing-item_one color10">
                                 <div><span>790</span>руб.</div>
                                 <div>за одно занятие</div>
                             </div>
-                            <div class="pricing-item_set">
+                            <div class="pricing-item_set pricing-item_set_hit">
                                 Стоимость 6320 руб.
                                 <span>Хватит<br>на месяц - полтора</span>
                             </div>
@@ -848,18 +849,18 @@
                             <div class="pricing-item_icon bordercolor2"><img class="right"
                                     src="https://cdn.nyutonika.ru/icons/прайс-2.svg" alt="">
                             </div>
-                            <ul class="pricing-header_top color20">
+                            <ul class="pricing-header_top pricing-header_top_normal">
                                 <li>
-                                    Самая низкая цена
+                                
                                 </li>
                             </ul>
-                            <div class="pricing-item_title">Пакет<br>
+                            <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                                 на 64 занятия</div>
                             <div class="pricing-item_one color20">
                                 <div><span>690</span>руб.</div>
                                 <div>за одно занятие</div>
                             </div>
-                            <div class="pricing-item_set">
+                            <div class="pricing-item_set pricing-item_set_hit">
                                 Стоимость 44160 руб.
                                 <span>Хватит<br>примерно на год</span>
                             </div>
@@ -876,22 +877,21 @@
                             <div class="pricing-item_icon  bordercolor3"><img
                                     src="https://cdn.nyutonika.ru/icons/прайс-3.svg" alt="">
                             </div>
-                            <ul class="pricing-header_top color19">
+                            <ul class="pricing-header_top   pricing-header_top_normal">
                                 <li>
 
                                 </li>
                             </ul>
-                            <div class="pricing-item_title bottom">Пакет<br>
+                            <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                                 на 1 занятие</div>
                             <div class="pricing-item_one color11">
                                 <div><span>990</span>руб.</div>
                                 <div>за одно занятие</div>
                             </div>
-                            <div class="pricing-item_set">
+                            <div class="pricing-item_set pricing-item_set_hit">
 
-                                <span>По одному занятию обычно оплачивают, на первых этапах, чтобы удостовериться в
-                                    качестве занятий и принять решение, какой пакет более удобен при последующей
-                                    оплате</span>
+                                <span>Удобно<br>
+                                    для разовых занятий</span>
                             </div>
                             <div class="pricing-item_button">
                                 <a href="" class="uk-button uk-button-primary button-tree button-color-3">
@@ -906,18 +906,18 @@
                             <div class="pricing-item_icon bordercolor4"><img
                                     src="https://cdn.nyutonika.ru/icons/прайс-4.svg" alt="">
                             </div>
-                            <ul class="pricing-header_top color19">
+                            <ul class="pricing-header_top  pricing-header_top_normal">
                                 <li>
 
                                 </li>
                             </ul>
-                            <div class="pricing-item_title bottom">Пакет<br>
+                            <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                                 на 4 занятия</div>
                             <div class="pricing-item_one color21">
                                 <div><span>890</span>руб.</div>
                                 <div>за одно занятие</div>
                             </div>
-                            <div class="pricing-item_set">
+                            <div class="pricing-item_set pricing-item_set_hit">
                                 Стоимость 3560 руб.
                                 <span>Хватит<br>на две-три недели</span>
                             </div>
@@ -934,18 +934,18 @@
                             <div class="pricing-item_icon bordercolor5"><img class="right"
                                     src="https://cdn.nyutonika.ru/icons/прайс-5.svg" alt="">
                             </div>
-                            <ul class="pricing-header_top color19">
+                            <ul class="pricing-header_top  pricing-header_top_normal">
                                 <li>
 
                                 </li>
                             </ul>
-                            <div class="pricing-item_title bottom">Пакет<br>
+                            <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                                 на 16 занятий</div>
                             <div class="pricing-item_one color3">
                                 <div><span>750</span>руб.</div>
                                 <div>за одно занятие</div>
                             </div>
-                            <div class="pricing-item_set">
+                            <div class="pricing-item_set pricing-item_set_hit">
                                 Стоимость 12000 руб.
                                 <span>Хватит<br>на два-три месяца</span>
                             </div>
@@ -962,18 +962,18 @@
                             <div class="pricing-item_icon bordercolor6"><img
                                     src="https://cdn.nyutonika.ru/icons/прайс-6.svg" alt="">
                             </div>
-                            <ul class="pricing-header_top color19">
+                            <ul class="pricing-header_top  pricing-header_top_normal">
                                 <li>
 
                                 </li>
                             </ul>
-                            <div class="pricing-item_title bottom">Пакет<br>
+                            <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                                 на 32 занятия</div>
                             <div class="pricing-item_one color5">
                                 <div><span>730</span>руб.</div>
                                 <div>за одно занятие</div>
                             </div>
-                            <div class="pricing-item_set">
+                            <div class="pricing-item_set pricing-item_set_hit">
                                 Стоимость 23360 руб.
                                 <span>Хватит<br>на четыре-пять месяцев</span>
                             </div>
@@ -990,18 +990,18 @@
                             <div class="pricing-item_icon bordercolor7"><img class="right"
                                     src="https://cdn.nyutonika.ru/icons/прайс-7.svg" alt="">
                             </div>
-                            <ul class="pricing-header_top color19">
+                            <ul class="pricing-header_top  pricing-header_top_normal">
                                 <li>
 
                                 </li>
                             </ul>
-                            <div class="pricing-item_title bottom">Пакет<br>
+                            <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                                 на 48 занятий</div>
                             <div class="pricing-item_one color4">
                                 <div><span>710</span>руб.</div>
                                 <div>за одно занятие</div>
                             </div>
-                            <div class="pricing-item_set">
+                            <div class="pricing-item_set pricing-item_set_hit">
                                 Стоимость 34080 руб.
                                 <span>Хватит<br>на шесть-восемь месяцев</span>
                             </div>
