Правки ценники - кнопка на мобильной версии доп2

--- a/index.html
+++ b/index.html
@@ -901,8 +901,11 @@
 
                         </div>
                     </div>
-                    <button class="btn-reviews-pricing btn-reviews-pricing_mobile btn-search-more">
-                        <span>Посмотреть все пакеты</span><span uk-icon="icon: arrow-down; ratio: 1.3"></span></button>
+                    <div class="btn-reviews-pricing_mobile">
+                        <button class="btn-reviews-pricing btn-search-more">
+                            <span>Посмотреть все пакеты</span><span uk-icon="icon: arrow-down; ratio: 1.3"></span></button>
+                    </div>
+                    
                     <div class="reviews-pricing-item">
                         <div class="pricing-item bordercolor4">
 
