--- a/страница-регистрации —2.html
+++ b/страница-регистрации —2.html
@@ -67,7 +67,14 @@
 
             <section class="container-item sign-in-registration-block">
                 <div>
-                    <h1 class="uk-text-center">Давайте знакомиться!</h1>
+                    <h1 class="uk-text-center uk-margin-medium-top">Давайте знакомиться!</h1>
+                    <h4 class="uk-text-center uk-margin-top">Вы хотите зарегистрироваться как?</h4>
+                    <ul class="form-tab-1 form-tab-1d uk-subnav uk-subnav-pill uk-margin-medium-bottom">
+                        <li class=" ">
+                            <a href="#" class="button-form-tab-1">Родитель</a>
+                        </li>
+                        <li><a href="https://nyutonika.ru/n_ed" class="button-form-tab-2">Репетитор</a></li>
+                    </ul>
                     <form class="form-2 uk-scrollspy-inview uk-margin-top" action="" method="POST">
                         <fieldset class="uk-fieldset">
 
@@ -99,11 +106,13 @@
 
                             <!-- Появляющийся блок   -->
                             <ul id="notice" class="checkbox-tab notice-block">
-                                <li id="notice-email" class="notice-block-text"><span uk-icon="icon: warning; ratio: 1.7"></span>
+                                <li id="notice-email" class="notice-block-text"><span
+                                        uk-icon="icon: warning; ratio: 1.7"></span>
                                     <p>Указанный e-mail уже зарегистрирован.<a href="">Восстановить пароль&nbsp;→</a>
                                     </p>
                                 </li>
-                                <li id="notice-pass" class="notice-block-text"><span uk-icon="icon: warning; ratio: 1.7"></span>
+                                <li id="notice-pass" class="notice-block-text"><span
+                                        uk-icon="icon: warning; ratio: 1.7"></span>
                                     <p>Пароли не совпадают</p>
                                 </li>
                             </ul>
@@ -114,7 +123,8 @@
                                     политикой обработки персональных данных и даю согласие на обработку данных</span>
                             </div>
                             <div class="uk-margin-bottom uk-margin-medium-top uk-margin-medium-bottom uk-text-center">
-                                <button type="submit" class="uk-button uk-button-default button-two">Регистрация ученика</button>
+                                <button type="submit" class="uk-button uk-button-default button-two">Регистрация
+                                    родителя</button>
                             </div>
                         </fieldset>
                     </form>
@@ -161,6 +171,7 @@
             </div>
         </footer>
     </div>
+
     <script src="https://cdn.nyutonika.ru/js/jquery.maskedinput-1.4.1.js" type="text/javascript"></script>
 </body>
 
