Клик на мобильном меню пункт 2 уровня

--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
                                             </li>
                                             <li class="uk-parent"><a href="#">Пункт меню <span
                                                         class="uk-nav-parent-icon icon-menu-two"></span></a></li>
-                                            <li class="uk-parent"><a href="#">Продолжаем <span
-                                                        class="uk-nav-parent-icon icon-menu-two"></span></a></li>
+                                            <li class=""><a href="#">Продолжаем</a></li>
                                         </ul>
 
                                     </li>
@@ -804,7 +803,7 @@
                 </div>
 
             </section>
-
+  <!-- Ценники-->
             <section class="container-item">
                 <div class="pricing pricing-simple uk-child-width-1-2@s uk-child-width-1-2@m uk-child-width-1-4@l uk-grid-small"
                     uk-grid>
