Пункт категории мобильного меню 3-го уровня

--- a/index.html
+++ b/index.html
@@ -113,17 +113,19 @@
                             <div class="uk-offcanvas-bar menu-slide">
                                 <div class="menu-mobile-title">Меню <a href="#offcanvas-slide"
                                         class="button-menu header-buttons-menu-close" uk-toggle></a></div>
-                                <ul class="uk-nav-default menu-mobile" uk-nav>
+                                <ul class="uk-nav-default menu-mobile  uk-nav">
                                     <li class="uk-parent nav-item"><a href="#">Направления<span
                                                 class="uk-nav-parent-icon icon-menu-one">
                                             </span></a>
 
                                         <ul class="uk-nav-sub menu-second-mobile uk-nav uk-nav-default" uk-nav>
                                             <li class="uk-parent">
-                                                <a href="#">Активное<span class="uk-nav-parent-icon icon-menu-two">
+                                                <a href="#">Категория<span class="uk-nav-parent-icon icon-menu-two">
                                                     </span></a>
 
                                                 <ul class="menu-second-sub-mobile uk-nav uk-nav-default" uk-nav>
+                                                    <li><a href="#" class="cat"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                        Ссылка на категорию</a></li>
                                                     <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
                                                             Активное</a></li>
                                                     <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
